--- a/ThietKeWeb/Views/Home/Address.cshtml
+++ b/ThietKeWeb/Views/Home/Address.cshtml
@@ -123,46 +123,46 @@
         </thead>
         <tbody>
             <tr>
-                <td>Sunset</td>
+                <td>Bình Thạnh </td>
                 <td>Baron</td>
-                <td>abc xyz QUẬN6, TPHCM</td>
-                <td>911 hoặc 113</td>
-                <td>Không bao giờ mở cửa, không thích bán</td>
+                <td>264F Bạch Đằng, P.24, Bình Thạnh, TpHCM</td>
+                <td>0248877986</td>
+                <td>8:00 AM - 22:00 PM</td>
             </tr>
             <tr>
-                <td>Lotus</td>
-                <td>Rồng lửa</td>
-                <td>abc xyz QUẬN 5, TPHCM</td>
-                <td>123 hoặc 456</td>
-                <td>Không bao giờ mở cửa, không thích bán</td>
+                <td>Gò Vấp</td>
+                <td>Baron</td>
+                <td>28 Quang Trung, P.12, Gò Vấp, TpHCM</td>
+                <td>0246696436</td>
+                <td>8:00 AM - 22:00 PM</td>
             </tr>
             <tr>
-                <td>Pearl</td>
-                <td>Rồng băng</td>
-                <td>abc xyz QUẬN 4, TPHCM</td>
-                <td>789 hoặc 111213</td>
-                <td>Không bao giờ mở cửa, không thích bán</td>
+                <td>Tân Bình</td>
+                <td>Baron</td>
+                <td>209 Cộng Hòa, P.13, Tân bình, TpHCM</td>
+                <td>0246455578</td>
+                <td>8:00 AM - 22:00 PM</td>
             </tr>
             <tr>
-                <td>Fracture</td>
-                <td>Rồng đất</td>
-                <td>abc xyz QUẬN 3, TPHCM</td>
-                <td>Không mua điện thoại</td>
-                <td>Không bao giờ mở cửa, không thích bán</td>
+                <td>Quận 10</td>
+                <td>Baron</td>
+                <td>01 Tô Hiến Thành, P.5, Quận 10, TpHCM</td>
+                <td>0247488552</td>
+                <td>8:00 AM - 22:00 PM</td>
             </tr>
             <tr>
-                <td>Fracture</td>
-                <td>Rồng hóa kỹ</td>
-                <td>abc xyz QUẬN 2, TPHCM</td>
-                <td>Không mua điện thoại</td>
-                <td>Không bao giờ mở cửa, không thích bán</td>
+                <td>Phú Nhuận</td>
+                <td>Baron</td>
+                <td>25 Hoàng Văn Thụ, p14, Phú Nhuận, TpHCM</td>
+                <td>0249978631</td>
+                <td>8:00 AM - 22:00 PM</td>
             </tr>
             <tr>
-                <td>Fracture</td>
-                <td>Rồng ngàn tuổi</td>
-                <td>abc xyz QUẬN 1, TPHCM</td>
-                <td>Không mua điện thoại</td>
-                <td>Không bao giờ mở cửa, không thích bán</td>
+                <td>Thủ Đức</td>
+                <td>Baron</td>
+                <td>75/2 Nguyễn Xiển, P.Long Thạnh Mỹ, Thủ Đức</td>
+                <td>0241190635</td>
+                <td>8:00 AM - 22:00 PM</td>
             </tr>
         </tbody>
     </table>
