--- a/ThietKeWeb/Views/Home/NguonGoc.cshtml
+++ b/ThietKeWeb/Views/Home/NguonGoc.cshtml
@@ -4,117 +4,14 @@
     Layout = "~/Views/Shared/MasterLayout.cshtml";
 }
 
-<style type="text/css">
-    section{
-        font-size:24px;
-        background-color:white;
-    }
-    h1{
-        text-align:center;
-    }
-</style>
-<header class="header">
-    <a href="~/Home/Index"><img src="~/Content/images/logo1.png" class="logo" /></a>
-    <div class="head-middle">
-        <input type="text" class="search" placeholder="Mời nhập nước uống bạn muốn" />
-        <button type="button" class="search-button">
-            <img src="~/Content/images/search-icon.JPG" class="search-image" />
-        </button>
-    </div>
-    <ul class="menu">
-        <li><a href="~/Home/GioHang" id="selection" class="cart"><img src="~/Content/images/Shopping-cart-icon.png" class="selection-image" />Giỏ hàng<i class="fas fa-circle"><span class="cart-count">0</span></i></a></li>
-        <li><a href="~/Home/Favourite" id="selection"><img src="~/Content/images/Heart-icon.png" class="selection-image" />Yêu thích</a></li>
-        <li><a href="~/Home/LogIn" id="selection"><img src="~/Content/images/Character-icon.png" class="selection-image" />Đăng Nhập/Đăng Ký</a></li>
-    </ul>
-    <div class="list-background">
-        <ul class="list">
-            <li><a href="~/Home/Index" class="menu1">Trang chủ</a></li>
-            <li class="dropdown-btn">
-                <a href="~/Home/ProDuctDetail" class="menu2">Thực đơn</a>
-                <ul class="dropdown-content">
-                    <li class="dropdown-content-list">
-                        <a href="~/Home/ProDuctDetail" class="content1">Cà phê</a>
-                        <ul class="prod-name">
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/CaPheDen">Cà phê đen</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/BacSiu">Bạc Sỉu</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/CapheCaramel">Cà phê Caramel</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown-content-list">
-                        <a href="~/Home/ProDuctDetail" class="content2">Trà</a>
-                        <ul class="prod-name">
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraDau">Trà Dâu</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraThachDau">Trà Thạch Dâu</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraNho">Trà Nho</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraVai">Trà Vải</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraDen">Trà Đen</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown-content-list">
-                        <a href="~/Home/ProDuctDetail" class="content1">Đá Xay</a>
-                        <ul class="prod-name">
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/OreoDaXay">Oreo Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/MiloDaXay">Milo Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/SocolaDaXay">Socola Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/CaramelDaXay">Caramel Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/DauDaXay">Dâu Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/MatchaSocolaDaXay">Matcha Socola Đá Xay</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown-content-list">
-                        <a href="~/Home/ProDuctDetail" class="content3">Khác</a>
-                        <ul class="prod-name">
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/Matcha">Matcha</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/ChanhTacMatOng">Chanh Tắc Mật Ong</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/SodaChanh">Soda Chanh</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/SuaTuoiTranChauDuongNau">Sữa Tươi Trân Châu Đường Nâu</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraSuaTruyenThong">Trà Sữa Truyền Thống</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraSuaTranChauTrang">Trà Sữa Trân Châu Trắng</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li><a href="~/Home/Recruit" class="menu3">Tuyển dụng</a></li>
-            <li><a href="~/Home/About us" class="menu3">Về chúng tôi</a></li>
-            <li><a href="~/Home/Address" class="menu3">Địa chỉ</a></li>
-        </ul>
-    </div>
-</header>
-<section>
-    <h1>NGUỒN GỐC</h1>
-    <div>
-        <p>CÂU CHUYỆN NÀY LÀ CỦA CHÚNG MÌNH</p>
-        <p>
-            Baron Coffee® được thành lập vào năm 2018, bắt nguồn từ tình yêu dành cho đất Việt cùng với cà phê và cộng đồng nơi đây. Tinh thần cộng đồng luôn chảy trong ADN của mỗi người Việt mình. Ngay từ những ngày đầu tiên, mục tiêu của chúng mình là có thể phục vụ và góp phần phát triển cộng đồng bằng cách siết chặt thêm sự kết nối và sự gắn bó giữa người với người. Ngày hôm nay, với hàng trăm cửa hàng trên khắp Việt Nam và trên Thế Giới, thứ chúng mình đem lại không chỉ dừng lại ở cà phê. Chúng mình còn là nơi để thuộc về, là nơi để kết nối tất cả mọi người với nhau. Từ đó, Baron Coffee® trở thành nơi dành riêng cho cộng đồng.
-        </p>
-        <br />
-        <p>
-            Trong tương lai, chúng mình sẽ luôn thấy một Việt Nam đang phát triển và một Baron Coffee® không ngừng cải tiến. Baron Coffee® - điểm tụ họp của cộng đồng, nơi mọi người có thể kết nối và gắn kết với nhau bằng tình yêu dành cho cà phê, trà và các món ăn ngon. Tại Highlands Coffee®, chúng mình luôn sát cánh cùng bạn, chúng mình luôn ủng hộ bạn và chúng mình luôn đồng hành với nhau như một cộng đồng.
-        </p>
-        <br />
-        <p>Baron Coffee® Là Của Chúng Mình.</p>
-    </div>
-</section>
-<footer id="footer">
-    <div>
-        <img src="~/Content/images/fb-icon.png" class="fb-icon-image" />
-        <img src="~/Content/images/ins-icon.png" class="ins-icon-image" />
-        <img src="~/Content/images/tw-icon.png" class="tw-icon-image" />
-    </div>
-    <div>
-        <p>&copy;  2018 Baron Coffee.  Powered by Group Baron</p>
-    </div>
-    <div>
-        <img src="~/Content/images/phone-icon.png" class="phone-icon-image" />
-    </div>
-    <div>
-        <p>0245269466</p>
-    </div>
-    <div>
-        <img src="~/Content/images/email-icon.png" class="email-icon-image" />
-    </div>
-    <div>
-        <p>customerservice@Baroncoffee.com.vn</p>
-    </div>
-</footer>
+<h1>NGUỒN GỐC</h1>
+<div>
+    CÂU CHUYỆN NÀY LÀ CỦA CHÚNG MÌNH
+    <br />
+    Baron Coffee® được thành lập vào năm 2018, bắt nguồn từ tình yêu dành cho đất Việt cùng với cà phê và cộng đồng nơi đây. Tinh thần cộng đồng luôn chảy trong ADN của mỗi người Việt mình. Ngay từ những ngày đầu tiên, mục tiêu của chúng mình là có thể phục vụ và góp phần phát triển cộng đồng bằng cách siết chặt thêm sự kết nối và sự gắn bó giữa người với người. Ngày hôm nay, với hàng trăm cửa hàng trên khắp Việt Nam và trên Thế Giới, thứ chúng mình đem lại không chỉ dừng lại ở cà phê. Chúng mình còn là nơi để thuộc về, là nơi để kết nối tất cả mọi người với nhau. Từ đó, Baron Coffee® trở thành nơi dành riêng cho cộng đồng.
+    <br />
+    Trong tương lai, chúng mình sẽ luôn thấy một Việt Nam đang phát triển và một Baron Coffee® không ngừng cải tiến. Baron Coffee® - điểm tụ họp của cộng đồng, nơi mọi người có thể kết nối và gắn kết với nhau bằng tình yêu dành cho cà phê, trà và các món ăn ngon. Tại Baron Coffee®, chúng mình luôn sát cánh cùng bạn, chúng mình luôn ủng hộ bạn và chúng mình luôn đồng hành với nhau như một cộng đồng.
+    <br />
+    Baron Coffee® Là Của Chúng Mình.
+</div>
 
