--- a/ThietKeWeb/Views/Home/Index.cshtml
+++ b/ThietKeWeb/Views/Home/Index.cshtml
@@ -66,7 +66,21 @@
                 </ul>
             </li>
             <li><a href="~/Home/Recruit" class="menu3">Tuyển dụng</a></li>
-            <li><a href="~/Home/About us" class="menu3">Về chúng tôi</a></li>
+            <li class="dropdown-btn">
+                <a href="~/Home/About us" class="menu3">Về chúng tôi</a>
+                <ul class="dropdown-content">
+                    <li class="dropdown-content-list">
+                        <a href="~/Home/NguonGoc" class="content1">Nguồn gốc</a>
+                    </li>
+                    <li class="dropdown-content-list">
+                        <a href="~/Home/DichVu" class="content2">Dịch vụ</a>
+                    </li>
+                    <li class="dropdown-content-list">
+                        <a href="~/Home/NgheNghiep" class="content3">Nghề nghiệp</a>
+                    </li>
+                </ul>
+            </li>
+
             <li><a href="~/Home/Address" class="menu3">Địa chỉ</a></li>
         </ul>
     </div>
