--- a/ThietKeWeb/Views/Home/DichVu.cshtml
+++ b/ThietKeWeb/Views/Home/DichVu.cshtml
@@ -1,16 +1,16 @@
 ﻿
 @{
-    ViewBag.Title = "NguonGoc";
+    ViewBag.Title = "DichVu";
     Layout = "~/Views/Shared/MasterLayout.cshtml";
 }
-
 <style type="text/css">
-    section{
-        font-size:24px;
-        background-color:white;
+    section {
+        font-size: 24px;
+        background-color: white;
     }
-    h1{
-        text-align:center;
+
+    h1 {
+        text-align: center;
     }
 </style>
 <header class="header">
@@ -89,23 +89,22 @@
                     </li>
                 </ul>
             </li>
-                <li><a href="~/Home/Address" class="menu3">Địa chỉ</a></li>
-            </ul>
+            <li><a href="~/Home/Address" class="menu3">Địa chỉ</a></li>
+        </ul>
     </div>
 </header>
 <section>
-    <h1>NGUỒN GỐC</h1>
+    <h1>DỊCH VỤ</h1>
     <div>
-        <p>CÂU CHUYỆN NÀY LÀ CỦA CHÚNG MÌNH</p>
+        <p>DỊCH VỤ NÀY LÀ CỦA CHÚNG MÌNH</p>
+        <p>Chúng mình có thể làm gì để hoàn thiện Baron Coffee®?</p>
+        <p>Baron Coffee® là không gian của chúng mình nên mọi thứ ở đây đều vì sự thoải mái của chúng mình.</p>
+        <p>Đừng giữ trong lòng, hãy chia sẻ với chúng mình điều bạn mong muốn để cùng nhau giúp Baron Coffee® của chúng mình trở nên tuyệt vời hơn.</p>
         <p>
-            Baron Coffee® được thành lập vào năm 2018, bắt nguồn từ tình yêu dành cho đất Việt cùng với cà phê và cộng đồng nơi đây. Tinh thần cộng đồng luôn chảy trong ADN của mỗi người Việt mình. Ngay từ những ngày đầu tiên, mục tiêu của chúng mình là có thể phục vụ và góp phần phát triển cộng đồng bằng cách siết chặt thêm sự kết nối và sự gắn bó giữa người với người. Ngày hôm nay, với hàng trăm cửa hàng trên khắp Việt Nam và trên Thế Giới, thứ chúng mình đem lại không chỉ dừng lại ở cà phê. Chúng mình còn là nơi để thuộc về, là nơi để kết nối tất cả mọi người với nhau. Từ đó, Baron Coffee® trở thành nơi dành riêng cho cộng đồng.
+            Đừng ngại chia sẻ ý kiến của bạn tại:
+            Facebook: https://www.facebook.com/baroncoffeevietnam/
         </p>
-        <br />
-        <p>
-            Trong tương lai, chúng mình sẽ luôn thấy một Việt Nam đang phát triển và một Baron Coffee® không ngừng cải tiến. Baron Coffee® - điểm tụ họp của cộng đồng, nơi mọi người có thể kết nối và gắn kết với nhau bằng tình yêu dành cho cà phê, trà và các món ăn ngon. Tại Highlands Coffee®, chúng mình luôn sát cánh cùng bạn, chúng mình luôn ủng hộ bạn và chúng mình luôn đồng hành với nhau như một cộng đồng.
-        </p>
-        <br />
-        <p>Baron Coffee® Là Của Chúng Mình.</p>
+        <p>Hoặc bạn có thể gửi email cho chúng mình đến địa chỉ: customerservice@baroncoffee.com.vn, chúng mình sẽ phản hồi trong thời gian sớm nhất có thể.</p>
     </div>
 </section>
 <footer id="footer">
@@ -130,4 +129,3 @@
         <p>customerservice@Baroncoffee.com.vn</p>
     </div>
 </footer>
-
