--- a/ThietKeWeb/Views/Shared/MasterLayout.cshtml
+++ b/ThietKeWeb/Views/Shared/MasterLayout.cshtml
@@ -365,6 +365,7 @@
             font-size: 18px;
             clear: both;
             display: flex;
+            justify-content:center;
         }
         p{
             margin-top:20px;
