--- a/ThietKeWeb/Views/Home/NgheNghiep.cshtml
+++ b/ThietKeWeb/Views/Home/NgheNghiep.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "NgheNghiep";
     Layout = "~/Views/Shared/MasterLayout.cshtml";
 }
@@ -94,9 +93,38 @@
     </div>
 </header>
 <section>
-<h1>NGHỀ NGHIỆP</h1>
-<div>
-    <br />
-    <br />
-    <br />
-</div>
+    <h1>NGHỀ NGHIỆP</h1>
+    <div>
+        <p>CHÚNG TÔI LUÔN XÂY DỰNG ĐỘI NGŨ VỮNG MẠNH VÀ BỀN CHẶT.</p>
+        <br />
+        <p>CÙNG VỚI NHIỀU VỊ TRÍ VÀ CHỨC VỤ TRONG CÔNG VIỆC</p>
+        <br />
+        <p>MỌI NGƯỜI ĐỀU BÌNH DẲNG VÀ TÔN TRỌNG LẪN NHAU</p>
+        <br />
+        <p>MÔI TRƯỜNG LÀM VIỆC THÂN THIỆN VÀ HÒA ĐỒNG.</p>
+    </div>
+</section>
+<footer id="footer">
+    <div>
+        <img src="~/Content/images/fb-icon.png" class="fb-icon-image" />
+        <img src="~/Content/images/ins-icon.png" class="ins-icon-image" />
+        <img src="~/Content/images/tw-icon.png" class="tw-icon-image" />
+    </div>
+    <div>
+        <p>&copy;  2018 Baron Coffee.  Powered by Group Baron</p>
+    </div>
+    <div>
+        <img src="~/Content/images/phone-icon.png" class="phone-icon-image" />
+    </div>
+    <div>
+        <p>0245269466</p>
+    </div>
+    <div>
+        <img src="~/Content/images/email-icon.png" class="email-icon-image" />
+    </div>
+    <div>
+        <p>customerservice@Baroncoffee.com.vn</p>
+    </div>
+</footer>
+
+
