--- a/ThietKeWeb/Views/Home/ProDuctDetail.cshtml
+++ b/ThietKeWeb/Views/Home/ProDuctDetail.cshtml
@@ -78,8 +78,8 @@
             <li><a href="~/Home/Recruit" class="menu3">Tuyển dụng</a></li>
             <li class="dropdown-btn">
                 <a href="~/Home/About us" class="menu3">Về chúng tôi</a>
-                <ul class="dropdown-content">
-                    <li class="dropdown-content-list-1">
+                <ul class="dropdown-content-1">
+                    <li class="dropdown-content-list">
                         <a href="~/Home/NguonGoc" class="content1">Nguồn gốc</a>
                     </li>
                     <li class="dropdown-content-list">
