--- a/ThietKeWeb/Views/Home/ProDuctDetail.cshtml
+++ b/ThietKeWeb/Views/Home/ProDuctDetail.cshtml
@@ -6,7 +6,7 @@
 
 <style type="text/css">
     h2 {
-        text-align: left;
+        text-align: center;
         vertical-align: middle;
     }
 
