--- a/ThietKeWeb/Views/Home/ProDuctDetail.cshtml
+++ b/ThietKeWeb/Views/Home/ProDuctDetail.cshtml
@@ -34,7 +34,7 @@
                 <a href="~/Home/ProDuctDetail" class="menu2">Thực đơn</a>
                 <ul class="dropdown-content">
                     <li class="dropdown-content-list">
-                        <a href="~/Home/ProDuctDetail" class="content1">Cà phê</a>
+                        <a href="" class="content1">Cà phê</a>
                         <ul class="prod-name">
                             <li class="prod-name-list"><a href="~/ProDuctDetail/CaPheDen">Cà phê đen</a></li>
                             <li class="prod-name-list"><a href="~/ProDuctDetail/BacSiu">Bạc Sỉu</a></li>
@@ -42,7 +42,7 @@
                         </ul>
                     </li>
                     <li class="dropdown-content-list">
-                        <a href="~/Home/ProDuctDetail" class="content2">Trà</a>
+                        <a href="" class="content2">Trà</a>
                         <ul class="prod-name">
                             <li class="prod-name-list"><a href="~/ProDuctDetail/TraDau">Trà Dâu</a></li>
                             <li class="prod-name-list"><a href="~/ProDuctDetail/TraThachDau">Trà Thạch Dâu</a></li>
@@ -52,7 +52,7 @@
                         </ul>
                     </li>
                     <li class="dropdown-content-list">
-                        <a href="~/Home/ProDuctDetail" class="content1">Đá Xay</a>
+                        <a href="" class="content1">Đá Xay</a>
                         <ul class="prod-name">
                             <li class="prod-name-list"><a href="~/ProDuctDetail/OreoDaXay">Oreo Đá Xay</a></li>
                             <li class="prod-name-list"><a href="~/ProDuctDetail/MiloDaXay">Milo Đá Xay</a></li>
@@ -63,7 +63,7 @@
                         </ul>
                     </li>
                     <li class="dropdown-content-list">
-                        <a href="~/Home/ProDuctDetail" class="content3">Khác</a>
+                        <a href="" class="content3">Khác</a>
                         <ul class="prod-name">
                             <li class="prod-name-list"><a href="~/ProDuctDetail/Matcha">Matcha</a></li>
                             <li class="prod-name-list"><a href="~/ProDuctDetail/ChanhTacMatOng">Chanh Tắc Mật Ong</a></li>
