--- a/ThietKeWeb/Views/Home/LogIn.cshtml
+++ b/ThietKeWeb/Views/Home/LogIn.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Login";
-    Layout = "~/Views/Shared/MasterLayout.cshtml";
+    Layout = null;
 }
 <!DOCTYPE html>
 <html lang="en">
