--- a/ThietKeWeb/Views/Home/Register.cshtml
+++ b/ThietKeWeb/Views/Home/Register.cshtml
@@ -1,7 +1,7 @@
 
 @{
     ViewBag.Title = "register";
-    Layout = "~/Views/Shared/MasterLayout.cshtml";
+    Layout = null;
 }
 <!DOCTYPE html>
 <html lang="en">
