--- a/ThietKeWeb/Views/Shared/MasterLayout.cshtml
+++ b/ThietKeWeb/Views/Shared/MasterLayout.cshtml
@@ -3,6 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
     <style type="text/css">
         * {
             margin: 0;
@@ -35,13 +37,16 @@
         .head-middle {
             position: relative;
         }
+        input {
+            max-width: 470px;
+        }
 
         .search {
             margin-left: 5vw;
             border: 1px solid #ccc;
             border-radius: 8px;
-            width: 470px;
-            padding: 10px;
+            width: 450px;
+            padding: 6px;
             outline: none;
         }
 
@@ -83,7 +88,7 @@
         }
 
         .menu {
-            margin-left: 3vw;
+            margin-left: 2vw;
         }
 
         li {
@@ -133,19 +138,19 @@
 
 
         .list-background {
-            display: flex;
+
             width: 100%;
+            height:35px;
         }
 
         .list {
             display: flex;
             align-items: center;
-            padding-top: 10px;
         }
 
         .menu1 {
             color: white;
-            margin-left:10vw;
+            margin-left: 10vw;
             display: inline-block;
             block-size: 35px;
             text-decoration: none;
@@ -154,6 +159,7 @@
 
             .menu1:hover {
                 display: block;
+                color: white;
                 background-color: #53382C;
             }
 
@@ -168,6 +174,7 @@
 
             .menu2:hover {
                 display: block;
+                color: white;
                 background-color: #53382C;
             }
 
@@ -182,6 +189,7 @@
 
             .menu3:hover {
                 display: block;
+                color: white;
                 background-color: #53382C;
             }
 
@@ -195,23 +203,26 @@
             position: absolute;
             list-style-type: none;
             z-index: 1;
-            left: -18.75vw;
+            left: -21.25vw;
             top: 100%;
             width: 100vw;
         }
 
         .dropdown-content-list {
-            width:100vw;
-            height: 200px;
+            width: 100vw;
+            height: 250px;
             text-align: center;
             margin-top: 15px;
-            white-space:nowrap;
+            white-space: nowrap;
         }
 
         .dropdown-content a {
             text-decoration: none;
             transition: all 0.2s ease;
             color: #ffcc00;
+        }
+        .content{
+            margin-left:30px;
         }
 
         .dropdown-content li a:hover {
@@ -237,7 +248,7 @@
             position: absolute;
             list-style-type: none;
             z-index: 1;
-            left: -58.35vw;
+            left: -60.75vw;
             top: 100%;
             width: 100vw;
         }
@@ -320,14 +331,15 @@
         .prod-container {
             display: flex;
             justify-content: center;
-            align-items: center; 
-            overflow:auto;
+            align-items: center;
+            overflow: auto;
         }
+
         .prod-container-2 {
             display: flex;
             align-items: center;
             overflow: auto;
-            white-space:nowrap;
+            white-space: nowrap;
         }
 
         .prod {
@@ -393,13 +405,13 @@
             font-size: 14px;
             color: black;
             font: Arial;
-            width:100%;
+            width: 100%;
         }
 
         .prod-price {
             font-size: 12px;
             color: green;
-            margin-left:30px;
+            margin-left: 30px;
         }
 
         #footer {
@@ -474,7 +486,7 @@
                     <a href="~/Home/ProDuctDetail" class="menu2">Thực đơn</a>
                     <ul class="dropdown-content">
                         <li class="dropdown-content-list">
-                            <a href="" class="content1">Cà phê</a>
+                            <a href="" class="content">Cà phê</a>
                             <ul class="prod-name">
                                 <li class="prod-name-list"><a href="~/ProDuctDetail/CaPheDen">Cà phê đen</a></li>
                                 <li class="prod-name-list"><a href="~/ProDuctDetail/BacSiu">Bạc Sỉu</a></li>
@@ -482,7 +494,7 @@
                             </ul>
                         </li>
                         <li class="dropdown-content-list">
-                            <a href="" class="content2">Trà</a>
+                            <a href="" class="content">Trà</a>
                             <ul class="prod-name">
                                 <li class="prod-name-list"><a href="~/ProDuctDetail/TraDau">Trà Dâu</a></li>
                                 <li class="prod-name-list"><a href="~/ProDuctDetail/TraThachDau">Trà Thạch Dâu</a></li>
@@ -492,7 +504,7 @@
                             </ul>
                         </li>
                         <li class="dropdown-content-list">
-                            <a href="" class="content1">Đá Xay</a>
+                            <a href="" class="content">Đá Xay</a>
                             <ul class="prod-name">
                                 <li class="prod-name-list"><a href="~/ProDuctDetail/OreoDaXay">Oreo Đá Xay</a></li>
                                 <li class="prod-name-list"><a href="~/ProDuctDetail/MiloDaXay">Milo Đá Xay</a></li>
@@ -503,7 +515,7 @@
                             </ul>
                         </li>
                         <li class="dropdown-content-list">
-                            <a href="" class="content3">Khác</a>
+                            <a href="" class="content">Khác</a>
                             <ul class="prod-name">
                                 <li class="prod-name-list"><a href="~/ProDuctDetail/Matcha">Matcha</a></li>
                                 <li class="prod-name-list"><a href="~/ProDuctDetail/ChanhTacMatOng">Chanh Tắc Mật Ong</a></li>
@@ -559,5 +571,8 @@
             <p>customerservice@Baroncoffee.com.vn</p>
         </div>
     </footer>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
 </body>
 </html>
