--- a/ThietKeWeb/Views/ProDuctDetail/BacSiu.cshtml
+++ b/ThietKeWeb/Views/ProDuctDetail/BacSiu.cshtml
@@ -79,42 +79,71 @@
             padding-top: 10px;
             padding-left: 10px;
         }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            color: black;
+            background-color: none; /* Màu nền mặc định */
+
+            border: 1px solid #cccc;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-right: 5px;
+            margin-bottom: 10px;
+        }
+
+            button.selected {
+                background-color: forestgreen; /* Màu khi được chọn */
+            }
+
+        .group {
+            margin-bottom: 20px;
+        }
     </style>
 </head>
-                <body>
-                    <div class="container">
-                        <div class="image">
-                            <img src="~/Content/images/sp3.png" width="550" height="500" />
-                        </div>
-                        <div class="ProdInfo">
-                            <label>Bạc Sỉu</label>
-                            <p class="ProdPrice">20.000 VND</p>
-                            <p class="ProdType">Chọn size (bắt buộc)</p>
-                            <form>
-                                <input type="submit" class="btn btn-default" value="Nhỏ + 0 đ" />
-                                <input type="submit" class="btn btn-default" value="Vừa + 10.000 đ" />
-                                <input type="submit" class="btn btn-default" value="Lớn + 16.000 đ" />
-                            </form>
-                            <p class="ProdType">Topping</p>
-                            <form>
-                                <input type="submit" class="btn btn-default" value="Sốt Caramel + 10.000 đ " />
-                                <input type="submit" class="btn btn-default" value="Shot Expresso + 10.000 đ " />
-                            </form>
-                            <form class="ProdType">
-                                <input type="submit" class="btn btn-default" value="Trân châu trắng + 10.000 đ " />
-                            </form>
-                            <div id="button">
-                                <a href="~/Home/Index" class="btn btn-success">Đặt mua hàng</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ProdDescription">
-                        <label>Mô tả sản phẩm</label>
-                        <p>
-                            Bạc sỉu chính là "Ly sữa trắng kèm một chút cà phê".
-                            Thức uống này rất phù hợp những ai vừa muốn trải nghiệm chút vị đắng của cà phê vừa muốn thưởng thức vị ngọt béo ngậy từ sữa.
-                        </p>
-                    </div>
-                </body>
-            </html>
-    
+<body>
+    <div class="container">
+        <div class="image">
+            <img src="~/Content/images/sp3.png" width="550" height="500" />
+        </div>
+        <div class="ProdInfo">
+            <label>Bạc Sỉu</label>
+            <p class="ProdPrice">20.000 VND</p>
+            <p class="ProdType">Chọn size (bắt buộc)</p>
+            @*<input type="submit" class="btn btn-default" value="Nhỏ + 0 đ" />
+                <input type="submit" class="btn btn-default" value="Vừa + 10.000 đ" />
+                <input type="submit" class="btn btn-default" value="Lớn + 16.000 đ" />*@
+            <div class="group">
+                <button class="optionButton" data-group="1" onclick="selectOption(this)">Nhỏ + 0 đ</button>
+                <button class="optionButton" data-group="1" onclick="selectOption(this)">Vừa + 10.000 đ</button>
+                <button class="optionButton" data-group="1" onclick="selectOption(this)">Lớn + 16.000đ</button>
+            </div>
+            <p class="ProdType">Topping</p>
+            @*<form>
+                    <input type="submit" class="btn btn-default" value="Sốt Caramel + 10.000 đ " />
+                    <input type="submit" class="btn btn-default" value="Shot Expresso + 10.000 đ " />
+                </form>*@
+            <div class="group">
+                <button class="optionButton" data-group="2" onclick="selectOption(this)">Sốt Caramel + 10.000 đ</button>
+                <button class="optionButton" data-group="2" onclick="selectOption(this)">Shot Expresso + 10.000 đ</button>
+                <button class="optionButton" data-group="2" onclick="selectOption(this)">Trân châu trắng + 10.000đ</button>
+            </div>
+            @*<form class="ProdType">
+                    <input type="submit" class="btn btn-default" value="Trân châu trắng + 10.000 đ " />
+                </form>*@
+
+            <div id="button">
+                <a href="~/Home/Index" class="btn btn-success">Đặt mua hàng</a>
+            </div>
+        </div>
+    </div>
+    <div class="ProdDescription">
+        <label>Mô tả sản phẩm</label>
+        <p>
+            Bạc sỉu chính là "Ly sữa trắng kèm một chút cà phê".
+            Thức uống này rất phù hợp những ai vừa muốn trải nghiệm chút vị đắng của cà phê vừa muốn thưởng thức vị ngọt béo ngậy từ sữa.
+        </p>
+    </div>
+</body>
+</html>
