--- a/ThietKeWeb/Views/Shared/MasterLayout.cshtml
+++ b/ThietKeWeb/Views/Shared/MasterLayout.cshtml
@@ -18,6 +18,7 @@
             font-weight: bold;
             background-color: #f0f0f0;
             text-decoration: none;
+            width:100%;
         }
 
         .header {
@@ -226,6 +227,7 @@
         }
 
         .dropdown-content li a:hover {
+            color: #ffcc00;
             background-color: inherit;
         }
 
