--- a/ThietKeWeb/Content/stylesheet1.css
+++ b/ThietKeWeb/Content/stylesheet1.css
@@ -9,7 +9,6 @@ body {
     justify-content: center;
     margin-top: 5%;
 }
-
 .login {
     padding: 90px 75px;
     background-color: #fff;
@@ -60,6 +59,7 @@ body {
     text-align: center;
     font-size: 20px;
     color: #999;
+    text-decoration:none;
 }
 .login-signup-link {
     color: #2979ff;
